# svdimagecompress-rs

./: Cargo.toml  README.md
src/: compress.rs  imagewrapper.rs  lib.rs
